--- a/index.html
+++ b/index.html
@@ -53,6 +53,230 @@
 
 
 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+<!doctype html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>AeroSpace — Book Flights</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+
+<body>
+
+    <!-- HERO -->
+    <section class="hero">
+        <div class="hero-content">
+            <h1>Fly with Comfort & Safety</h1>
+            <p>Your trusted partner for reliable & affordable travel.</p>
+        </div>
+    </section>
+
+    <!-- SEARCH -->
+    <section class="search container">
+        <h2>Search Flights</h2>
+        <div class="search-box">
+            <input type="text" placeholder="From">
+            <input type="text" placeholder="To">
+            <input type="date">
+            <select>
+                <option>1 Passenger</option>
+                <option>2 Passengers</option>
+            </select>
+            <button class="btn">Search Flights</button>
+        </div>
+    </section>
+
+    <!-- FEATURES -->
+    <section class="features container">
+        <h2>Why Choose AeroSpace?</h2>
+
+        <div class="features-grid">
+            <div class="card">
+                <h3>Fast Booking</h3>
+                <p>Book your flights in minutes with our clean & simple UI.</p>
+            </div>
+            <div class="card">
+                <h3>Comfort Seating</h3>
+                <p>Soft cushions & more legroom for a relaxed journey.</p>
+            </div>
+            <div class="card">
+                <h3>Safe Travel</h3>
+                <p>We follow strict aircraft hygiene and safety measures.</p>
+            </div>
+            <div class="card">
+                <h3>24/7 Support</h3>
+                <p>Our support team helps you anytime, anywhere.</p>
+            </div>
+        </div>
+    </section>
+
+    <!-- OFFERS SECTION -->
+    <section class="offers container">
+        <h2>Special Offers</h2>
+
+        <div class="offers-grid">
+            <div class="offer-card">
+                <h3>20% OFF International</h3>
+                <p>Limited time deal on selected global routes.</p>
+            </div>
+
+            <div class="offer-card">
+                <h3>Student Discounts</h3>
+                <p>Exclusive airfare for students travelling home.</p>
+            </div>
+
+            <div class="offer-card">
+                <h3>Festive Fares</h3>
+                <p>Special Diwali & New Year discounts available.</p>
+            </div>
+        </div>
+    </section>
+
+    <!-- POPULAR ROUTES -->
+    <section class="routes container">
+        <h2>Popular Routes</h2>
+
+        <div class="route-list">
+            <div class="route-card">
+                <h3>Chennai → Delhi</h3>
+                <p>From ₹5,499</p>
+            </div>
+
+            <div class="route-card">
+                <h3>Mumbai → Bangalore</h3>
+                <p>From ₹3,899</p>
+            </div>
+
+            <div class="route-card">
+                <h3>Hyderabad → Goa</h3>
+                <p>From ₹2,999</p>
+            </div>
+
+            <div class="route-card">
+                <h3>Kolkata → Jaipur</h3>
+                <p>From ₹4,199</p>
+            </div>
+
+            <div class="route-card">
+                <h3>Delhi → Dubai</h3>
+                <p>From ₹11,499</p>
+            </div>
+        </div>
+    </section>
+
+    <!-- TRAVEL INFO -->
+    <section class="info container">
+        <h2>Travel Information</h2>
+
+        <div class="info-grid">
+            <div class="info-card">
+                <h3>Baggage Policy</h3>
+                <p>Know your cabin & check-in baggage allowances.</p>
+            </div>
+
+            <div class="info-card">
+                <h3>Check-In</h3>
+                <p>Web check-in available 48 hours before departure.</p>
+            </div>
+
+            <div class="info-card">
+                <h3>Flight Status</h3>
+                <p>Track your flight’s real-time arrival & departure.</p>
+            </div>
+        </div>
+    </section>
+
+    <!-- ABOUT -->
+    <section class="about container">
+        <h2>About AeroSpace</h2>
+        <p>
+            We provide clean, safe, and affordable flight services across India & international routes. 
+            Our mission is to offer stress-free journeys with modern aircraft and professional staff.
+        </p>
+    </section>
+
+    <!-- CUSTOMER REVIEWS -->
+    <section class="reviews container">
+        <h2>What Our Passengers Say</h2>
+
+        <div class="review-grid">
+            <div class="review-card">
+                <p>"Very clean aircraft & great service. Loved the experience!"</p>
+                <h4>— Priya, Chennai</h4>
+            </div>
+
+            <div class="review-card">
+                <p>"Affordable pricing and smooth travel. Highly recommended!"</p>
+                <h4>— Arjun, Bangalore</h4>
+            </div>
+
+            <div class="review-card">
+                <p>"Customer support is excellent. They helped me instantly."</p>
+                <h4>— Kavya, Mumbai</h4>
+            </div>
+        </div>
+    </section>
+
+<script src="app.js"></script>
+</body>
+</html>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
  
 
 
